--- a/vignettes/GXwasR_PRS.Rmd
+++ b/vignettes/GXwasR_PRS.Rmd
@@ -13,7 +13,7 @@ output:
     toc_float: true
     toc_depth: 2
     code_folding: show
-date: "5 August 2025"
+date: "8 August 2025"
 package: "GXwasR 0.99.0"
 vignette: >
   %\VignetteIndexEntry{GXwasR_PRS}
@@ -32,9 +32,6 @@ vignette: >
 ``` r
 ## Call some libraries (Users can ignore this.)
 library(printr)
-#> Registered S3 method overwritten by 'printr':
-#>   method                from     
-#>   knit_print.data.frame rmarkdown
 library(rmarkdown)
 ```
 
@@ -44,19 +41,6 @@ library(rmarkdown)
 ``` r
 ## Call GXwasR library
 library(GXwasR)
-#> 
-#> GXwasR: Genome-wide and x-chromosome wide association analyses applying best practices of quality control over genetic data
-#> Version 0.99.0 () installed
-#> Author: c(
-#>     person(given = "Banabithi",
-#>            family = "Bose",
-#>            role = c("cre", "aut"),
-#>            email = "banabithi.bose@gmail.com",
-#>            comment = c(ORCID = "0000-0003-0842-8768"))
-#>            )
-#> Maintainer: Banabithi Bose <banabithi.bose@gmail.com>
-#> Tutorial: https://github.com
-#> Use citation("GXwasR") to know how to cite this work.
 ```
 
 # Computing standard PRS using ComputePRS():
@@ -311,9 +295,7 @@ pheno_type <- "binary"
 ldclump <- FALSE
 pheno_type <- "binary"
 PRSresult <- ComputePRS(DataDir, ResultDir, finput, summarystat, phenofile, covarfile, effectsize = "BETA", LDreference = "GXwasR_example", ldclump = FALSE, clump_p1, clump_p2, clump_r2, clump_kb, byCHR = TRUE, pthreshold = pthreshold, highLD_regions = highLD_regions, ld_prunning = TRUE, window_size = 50, step_size = 5, r2_threshold = 0.02, nPC = 6, pheno_type = "binary")
-#> Using PLINK v1.9.0-b.7.7 64-bit (22 Oct 2024)
-#> Warning: cannot remove file '/private/var/folders/d6/gtwl3_017sj4pp14fbfcbqjh0000gp/T/Rtmp47EYmB/temp_libpath102938d3a72d', reason 'Directory not empty'
-#> 
+#> Warning: cannot remove file '/private/var/folders/d6/gtwl3_017sj4pp14fbfcbqjh0000gp/T/RtmpcRh9ZZ/temp_libpath4e4d53c96c8f', reason 'Directory not empty'
 #> ℹ 0.001
 #> • Computing PRS for threshold 0.001
 #> ℹ 0.05
@@ -328,11 +310,9 @@ PRSresult <- ComputePRS(DataDir, ResultDir, finput, summarystat, phenofile, cova
 #> • Computing PRS for threshold 0.4
 #> ℹ 0.5
 #> • Computing PRS for threshold 0.5
-#> This message is displayed once every 8 hours.
 PRSresult$PRS_plot
+#> Error in grid.Call.graphics(C_text, as.graphicsAnnot(x$label), x$x, x$y, : Metric information not available for this family/device
 ```
-
-![plot of chunk compute_prs](./compute_prs-1.png)
 
 
 ``` r
@@ -439,7 +419,7 @@ x <- QCsnp(DataDir = DataDir, ResultDir = ResultDir, finput = finput, foutput = 
 #> --hwe: 3 variants removed due to Hardy-Weinberg exact test.
 #> 5467 variants removed due to minor allele threshold(s)
 #> ℹ No filter based on differential missingness will be applied.
-#> ✔ Output plink files prefixed as ,filtered_step1, with passed SNPs are saved in ResultDir.
+#> ✔ Output PLINK files prefixed as ,filtered_step1, with passed SNPs are saved in ResultDir.
 #> ℹ Input file has 26527 SNPs.
 #> ℹ Output file has 16843 SNPs after filtering.
 ```
@@ -472,7 +452,7 @@ finput <- "filtered_step1"
 foutput <- "NewtargetData"
 FilterSNP(DataDir, ResultDir, finput, foutput, SNPvec, extract = TRUE)
 #> ℹ 991 SNPs are extracted
-#> ✔ Plink files with extracted SNPs are in /var/folders/d6/gtwl3_017sj4pp14fbfcbqjh0000gp/T//Rtmp47EYmB prefixed as NewtargetData
+#> ✔ Plink files with extracted SNPs are in /var/folders/d6/gtwl3_017sj4pp14fbfcbqjh0000gp/T//RtmpcRh9ZZ prefixed as NewtargetData
 #> NULL
 ```
 
@@ -517,7 +497,7 @@ pheno_type <- "binary"
 effectsize <- "BETA"
 ldclump <- FALSE
 PRSresult <- ComputePRS(DataDir, ResultDir, finput, summarystat, phenofile, covarfile, effectsize = "BETA", LDreference = "GXwasR_example", ldclump = FALSE, clump_p1, clump_p2, clump_r2, clump_kb, byCHR = TRUE, pthreshold = pthreshold, highLD_regions = highLD_regions, ld_prunning = TRUE, window_size = 50, step_size = 5, r2_threshold = 0.02, nPC = 6, pheno_type = "binary")
-#> Warning: cannot remove file '/private/var/folders/d6/gtwl3_017sj4pp14fbfcbqjh0000gp/T/Rtmp47EYmB/temp_libpath102938d3a72d', reason 'Directory not empty'
+#> Warning: cannot remove file '/private/var/folders/d6/gtwl3_017sj4pp14fbfcbqjh0000gp/T/RtmpcRh9ZZ/temp_libpath4e4d53c96c8f', reason 'Directory not empty'
 #> ℹ 0.001
 #> • Computing PRS for threshold 0.001
 #> ℹ 0.05
@@ -533,9 +513,8 @@ PRSresult <- ComputePRS(DataDir, ResultDir, finput, summarystat, phenofile, cova
 #> ℹ 0.5
 #> • Computing PRS for threshold 0.5
 PRSresult$PRS_plot
+#> Error in grid.Call.graphics(C_text, as.graphicsAnnot(x$label), x$x, x$y, : Metric information not available for this family/device
 ```
-
-![plot of chunk compute_prs_2](./compute_prs_2-1.png)
 
 
 ``` r
@@ -665,12 +644,12 @@ finput <- "NewtargetData"
 foutput <- "maletarget"
 sex <- "males"
 x <- GetMFPlink(DataDir = DataDir, ResultDir = ResultDir, finput = finput, foutput = foutput, sex = sex, xplink = FALSE, autoplink = FALSE)
-#> ✔ Output plink files, prefixed as maletarget, are in /var/folders/d6/gtwl3_017sj4pp14fbfcbqjh0000gp/T//Rtmp47EYmB
+#> ✔ Output PLINK files, prefixed as maletarget, are in /var/folders/d6/gtwl3_017sj4pp14fbfcbqjh0000gp/T//RtmpcRh9ZZ
 
 foutput <- "femaletarget"
 sex <- "females"
 x <- GetMFPlink(DataDir = DataDir, ResultDir = ResultDir, finput = finput, foutput = foutput, sex = sex, xplink = FALSE, autoplink = FALSE)
-#> ✔ Output plink files, prefixed as femaletarget, are in /var/folders/d6/gtwl3_017sj4pp14fbfcbqjh0000gp/T//Rtmp47EYmB
+#> ✔ Output PLINK files, prefixed as femaletarget, are in /var/folders/d6/gtwl3_017sj4pp14fbfcbqjh0000gp/T//RtmpcRh9ZZ
 ```
 
 **(C) Perform LD clumping separately in both discovery data.**
@@ -723,7 +702,7 @@ pheno_type <- "binary"
 ldclump <- FALSE
 effectsize <- "BETA"
 PRSresultFemale <- ComputePRS(DataDir, ResultDir, finput, summarystat, phenofile, covarfile, effectsize = "BETA", LDreference = "GXwasR_example", ldclump = FALSE, clump_p1, clump_p2, clump_r2, clump_kb, byCHR = TRUE, pthreshold = pthreshold, highLD_regions = highLD_regions, ld_prunning = TRUE, window_size = 50, step_size = 5, r2_threshold = 0.02, nPC = 6, pheno_type = "binary")
-#> Warning: cannot remove file '/private/var/folders/d6/gtwl3_017sj4pp14fbfcbqjh0000gp/T/Rtmp47EYmB/temp_libpath102938d3a72d', reason 'Directory not empty'
+#> Warning: cannot remove file '/private/var/folders/d6/gtwl3_017sj4pp14fbfcbqjh0000gp/T/RtmpcRh9ZZ/temp_libpath4e4d53c96c8f', reason 'Directory not empty'
 #> ℹ 0.001
 #> • Computing PRS for threshold 0.001
 #> ℹ 0.05
@@ -739,9 +718,8 @@ PRSresultFemale <- ComputePRS(DataDir, ResultDir, finput, summarystat, phenofile
 #> ℹ 0.5
 #> • Computing PRS for threshold 0.5
 PRSresultFemale$PRS_plot
+#> Error in grid.Call.graphics(C_text, as.graphicsAnnot(x$label), x$x, x$y, : Metric information not available for this family/device
 ```
-
-![plot of chunk compute_prs_female](./compute_prs_female-1.png)
 
 
 ``` r
@@ -807,7 +785,7 @@ pheno_type <- "binary"
 ldclump <- FALSE
 effectsize <- "BETA"
 PRSresultmale <- ComputePRS(DataDir, ResultDir, finput, summarystat, phenofile, covarfile, effectsize = "BETA", LDreference = "GXwasR_example", ldclump = FALSE, clump_p1 = clump_p1, clump_p2 = clump_p2, clump_r2 = clump_r2, clump_kb = clump_kb, byCHR = TRUE, pthreshold = pthreshold, highLD_regions = highLD_regions, ld_prunning = TRUE, window_size = 50, step_size = 5, r2_threshold = 0.02, nPC = 6, pheno_type = "binary")
-#> Warning: cannot remove file '/private/var/folders/d6/gtwl3_017sj4pp14fbfcbqjh0000gp/T/Rtmp47EYmB/temp_libpath102938d3a72d', reason 'Directory not empty'
+#> Warning: cannot remove file '/private/var/folders/d6/gtwl3_017sj4pp14fbfcbqjh0000gp/T/RtmpcRh9ZZ/temp_libpath4e4d53c96c8f', reason 'Directory not empty'
 #> ℹ 0.001
 #> • Computing PRS for threshold 0.001
 #> ℹ 0.05
@@ -823,9 +801,8 @@ PRSresultmale <- ComputePRS(DataDir, ResultDir, finput, summarystat, phenofile, 
 #> ℹ 0.5
 #> • Computing PRS for threshold 0.5
 PRSresultmale$PRS_plot
+#> Error in grid.Call.graphics(C_text, as.graphicsAnnot(x$label), x$x, x$y, : Metric information not available for this family/device
 ```
-
-![plot of chunk compute_prs_male](./compute_prs_male-1.png)
 
 
 ``` r
@@ -891,7 +868,9 @@ We hope that *[GXwasR](https://bioconductor.org/packages/3.21/GXwasR)* will be u
 citation("GXwasR")
 #> To cite package 'GXwasR' in publications use:
 #> 
-#>   Bose B, Blostein F, Kim J, Winters J, Actkins KV, Mayer D, Congivaram H, Niarchou M, Edwards DV, Davis LK, Stranger BE (2025). "GXwasR: A Toolkit for Investigating Sex-Differentiated Genetic Effects on Complex Traits." _medRxiv 2025.06.10.25329327_. doi:10.1101/2025.06.10.25329327
+#>   Bose B, Blostein F, Kim J, Winters J, Actkins KV, Mayer D, Congivaram H, Niarchou M, Edwards DV, Davis
+#>   LK, Stranger BE (2025). "GXwasR: A Toolkit for Investigating Sex-Differentiated Genetic Effects on
+#>   Complex Traits." _medRxiv 2025.06.10.25329327_. doi:10.1101/2025.06.10.25329327
 #>   <https://doi.org/10.1101/2025.06.10.25329327>.
 #> 
 #> A BibTeX entry for LaTeX users is
@@ -907,14 +886,14 @@ citation("GXwasR")
 
 # Reproducibility
 
-The *[GXwasR](https://bioconductor.org/packages/3.21/GXwasR)* package (Bose, Blostein, Kim, Winters, Actkins, Mayer, Congivaram, Niarchou, Edwards, Davis, and Stranger, 2025) was made possible thanks to:
+The *[GXwasR](https://bioconductor.org/packages/3.21/GXwasR)* package (Bose, Blostein, Kim et al., 2025) was made possible thanks to:
 
 * R (R Core Team, 2025)
 * *[BiocStyle](https://bioconductor.org/packages/3.21/BiocStyle)* (Oleś, 2025)
 * *[knitr](https://CRAN.R-project.org/package=knitr)* (Xie, 2025)
 * *[RefManageR](https://CRAN.R-project.org/package=RefManageR)* (McLean, 2017)
-* *[rmarkdown](https://CRAN.R-project.org/package=rmarkdown)* (Allaire, Xie, Dervieux, McPherson, Luraschi, Ushey, Atkins, Wickham, Cheng, Chang, and Iannone, 2024)
-* *[sessioninfo](https://CRAN.R-project.org/package=sessioninfo)* (Wickham, Chang, Flight, Müller, and Hester, 2025)
+* *[rmarkdown](https://CRAN.R-project.org/package=rmarkdown)* (Allaire, Xie, Dervieux et al., 2024)
+* *[sessioninfo](https://CRAN.R-project.org/package=sessioninfo)* (Wickham, Chang, Flight et al., 2025)
 * *[testthat](https://CRAN.R-project.org/package=testthat)* (Wickham, 2011)
 
 This package was developed using *[biocthis](https://bioconductor.org/packages/3.21/biocthis)*.
@@ -926,16 +905,16 @@ This package was developed using *[biocthis](https://bioconductor.org/packages/3
 #> ─ Session info ───────────────────────────────────────────────────────────────────────────────────────────────────────
 #>  setting  value
 #>  version  R version 4.5.1 (2025-06-13)
-#>  os       macOS Sequoia 15.5
+#>  os       macOS Sequoia 15.6
 #>  system   aarch64, darwin24.4.0
 #>  ui       unknown
 #>  language (EN)
 #>  collate  en_US.UTF-8
 #>  ctype    en_US.UTF-8
 #>  tz       America/New_York
-#>  date     2025-08-05
+#>  date     2025-08-08
 #>  pandoc   3.6.3 @ /Applications/Positron.app/Contents/Resources/app/quarto/bin/tools/aarch64/ (via rmarkdown)
-#>  quarto   1.7.32 @ /usr/local/bin/quarto
+#>  quarto   1.7.33 @ /usr/local/bin/quarto
 #> 
 #> ─ Packages ───────────────────────────────────────────────────────────────────────────────────────────────────────────
 #>  package              * version    date (UTC) lib source
@@ -976,6 +955,7 @@ This package was developed using *[biocthis](https://bioconductor.org/packages/3
 #>  digest                 0.6.37     2024-08-19 [2] CRAN (R 4.5.0)
 #>  doParallel             1.0.17     2022-02-07 [2] CRAN (R 4.5.0)
 #>  doRNG                  1.8.6.2    2025-04-02 [2] CRAN (R 4.5.0)
+#>  doSNOW                 1.0.20     2022-02-04 [2] CRAN (R 4.5.0)
 #>  dplyr                  1.1.4      2023-11-17 [2] CRAN (R 4.5.0)
 #>  ellipsis               0.3.2      2021-04-29 [3] CRAN (R 4.5.0)
 #>  evaluate               1.0.4      2025-06-18 [2] CRAN (R 4.5.1)
@@ -998,7 +978,7 @@ This package was developed using *[biocthis](https://bioconductor.org/packages/3
 #>  glue                   1.8.0      2024-09-30 [2] CRAN (R 4.5.0)
 #>  gridExtra              2.3        2017-09-09 [2] CRAN (R 4.5.0)
 #>  gtable                 0.3.6      2024-10-25 [2] CRAN (R 4.5.0)
-#>  GXwasR               * 0.99.0     2025-08-06 [1] Bioconductor
+#>  GXwasR               * 0.99.0     2025-08-08 [1] Bioconductor
 #>  hms                    1.1.3      2023-03-21 [2] CRAN (R 4.5.0)
 #>  htmltools              0.5.8.1    2024-04-04 [2] CRAN (R 4.5.0)
 #>  htmlwidgets            1.6.4      2023-12-06 [2] CRAN (R 4.5.0)
@@ -1013,15 +993,17 @@ This package was developed using *[biocthis](https://bioconductor.org/packages/3
 #>  lattice                0.22-7     2025-04-02 [4] CRAN (R 4.5.1)
 #>  lifecycle              1.0.4      2023-11-07 [2] CRAN (R 4.5.0)
 #>  lubridate              1.9.4      2024-12-08 [2] CRAN (R 4.5.1)
-#>  magrittr               2.0.3      2022-03-30 [2] CRAN (R 4.5.0)
+#>  magrittr             * 2.0.3      2022-03-30 [2] CRAN (R 4.5.0)
 #>  MASS                   7.3-65     2025-02-28 [4] CRAN (R 4.5.1)
 #>  mathjaxr               1.8-0      2025-04-30 [2] CRAN (R 4.5.1)
 #>  Matrix                 1.7-3      2025-03-11 [4] CRAN (R 4.5.1)
 #>  MatrixGenerics         1.20.0     2025-04-15 [2] Bioconduc~
 #>  matrixStats            1.5.0      2025-01-07 [2] CRAN (R 4.5.0)
 #>  memoise                2.0.1      2021-11-26 [2] CRAN (R 4.5.0)
+#>  mgcv                   1.9-3      2025-04-04 [4] CRAN (R 4.5.1)
 #>  mime                   0.13       2025-03-17 [2] CRAN (R 4.5.0)
 #>  miniUI                 0.1.2      2025-04-17 [3] CRAN (R 4.5.0)
+#>  nlme                   3.1-168    2025-03-31 [4] CRAN (R 4.5.1)
 #>  pillar                 1.11.0     2025-07-04 [2] CRAN (R 4.5.1)
 #>  pkgbuild               1.4.8      2025-05-26 [2] CRAN (R 4.5.0)
 #>  pkgconfig              2.0.3      2019-09-22 [2] CRAN (R 4.5.0)
@@ -1029,6 +1011,7 @@ This package was developed using *[biocthis](https://bioconductor.org/packages/3
 #>  pkgload                1.4.0      2024-06-28 [2] CRAN (R 4.5.0)
 #>  plyr                   1.8.9      2023-10-02 [2] CRAN (R 4.5.1)
 #>  plyranges              1.28.0     2025-04-15 [2] Bioconduc~
+#>  polynom                1.4-1      2022-04-11 [2] CRAN (R 4.5.0)
 #>  poolr                  1.2-0      2025-05-07 [2] CRAN (R 4.5.0)
 #>  prettyunits            1.2.0      2023-09-24 [2] CRAN (R 4.5.0)
 #>  printr               * 0.3        2023-03-08 [2] CRAN (R 4.5.0)
@@ -1043,6 +1026,7 @@ This package was developed using *[biocthis](https://bioconductor.org/packages/3
 #>  R.oo                   1.27.1     2025-05-02 [2] CRAN (R 4.5.0)
 #>  R.utils                2.13.0     2025-02-24 [2] CRAN (R 4.5.0)
 #>  R6                     2.6.1      2025-02-15 [2] CRAN (R 4.5.0)
+#>  ragg                   1.4.0      2025-04-10 [3] CRAN (R 4.5.0)
 #>  rbibutils              2.3        2024-10-04 [2] CRAN (R 4.5.1)
 #>  RColorBrewer           1.1-3      2022-04-03 [2] CRAN (R 4.5.0)
 #>  Rcpp                   1.1.0      2025-07-02 [2] CRAN (R 4.5.1)
@@ -1064,8 +1048,10 @@ This package was developed using *[biocthis](https://bioconductor.org/packages/3
 #>  S4Arrays               1.8.1      2025-06-01 [2] Bioconductor 3.21 (R 4.5.0)
 #>  S4Vectors              0.46.0     2025-04-15 [2] Bioconduc~
 #>  scales                 1.4.0      2025-04-24 [2] CRAN (R 4.5.0)
+#>  seqminer               9.7        2024-10-02 [2] CRAN (R 4.5.1)
 #>  sessioninfo          * 1.2.3      2025-02-05 [2] CRAN (R 4.5.1)
 #>  shiny                  1.11.1     2025-07-03 [2] CRAN (R 4.5.1)
+#>  snow                   0.4-4      2021-10-27 [2] CRAN (R 4.5.0)
 #>  SNPRelate              1.42.0     2025-04-15 [2] Bioconduc~
 #>  SparseArray            1.8.1      2025-07-23 [2] Bioconduc~
 #>  stringi                1.8.7      2025-03-27 [2] CRAN (R 4.5.0)
@@ -1073,7 +1059,9 @@ This package was developed using *[biocthis](https://bioconductor.org/packages/3
 #>  sumFREGAT              1.2.5      2022-06-07 [2] CRAN (R 4.5.1)
 #>  SummarizedExperiment   1.38.1     2025-04-30 [2] Bioconductor 3.21 (R 4.5.0)
 #>  sys                    3.4.3      2024-10-04 [2] CRAN (R 4.5.0)
+#>  systemfonts            1.2.3      2025-04-30 [2] CRAN (R 4.5.0)
 #>  testthat             * 3.2.3      2025-01-13 [2] CRAN (R 4.5.1)
+#>  textshaping            1.0.1      2025-05-01 [3] CRAN (R 4.5.0)
 #>  tibble                 3.3.0      2025-06-08 [2] CRAN (R 4.5.0)
 #>  tidyr                  1.3.1      2024-01-24 [2] CRAN (R 4.5.1)
 #>  tidyselect             1.2.1      2024-03-11 [2] CRAN (R 4.5.0)
@@ -1092,7 +1080,7 @@ This package was developed using *[biocthis](https://bioconductor.org/packages/3
 #>  XVector                0.48.0     2025-04-15 [2] Bioconduc~
 #>  yaml                   2.3.10     2024-07-26 [2] CRAN (R 4.5.0)
 #> 
-#>  [1] /private/var/folders/d6/gtwl3_017sj4pp14fbfcbqjh0000gp/T/Rtmp47EYmB/temp_libpath102938d3a72d
+#>  [1] /private/var/folders/d6/gtwl3_017sj4pp14fbfcbqjh0000gp/T/RtmpcRh9ZZ/temp_libpath4e4d53c96c8f
 #>  [2] /Users/mayerdav/Library/R/arm64/4.5/library
 #>  [3] /opt/homebrew/lib/R/4.5/site-library
 #>  [4] /opt/homebrew/Cellar/r/4.5.1/lib/R/library
